# rust_grad

./: Cargo.toml  README.md  compile_shaders.sh  makefile  maybe laziness pays off after all.md
examples/LLaMa7b/: main.rs
examples/metal_crossentropy/: main.rs
src/: lib.rs  main.rs
src/devices/: mod.rs
src/devices/cpu/: mod.rs
src/devices/metal/: mod.rs
src/dtypes/: mod.rs
src/nn/: mod.rs
src/nn/layers/: mod.rs
src/nn/optim/: mod.rs
src/shape/: mod.rs
src/storage/: mod.rs
src/tensor/: mod.rs  tape.rs
src/tensor/tensor_ops/: mod.rs  overload_ops.rs
src/tensor/tensor_ops/add/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/add/cpu/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/add/metal/: add.air  add.metal  add.metallib  metal_kernel.rs  mod.rs
src/tensor/tensor_ops/conv2d/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/cross_entropy/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/cross_entropy/cpu/: cpu_kernel.rs
src/tensor/tensor_ops/cross_entropy/metal/: cross_entropy.air  cross_entropy.metal  cross_entropy.metallib  (+2 more)
src/tensor/tensor_ops/matmul/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/maxpool2d/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/pow/: cpu_kernel.rs  metal_kernel.rs  mod.rs
src/tensor/tensor_ops/relu/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/softmax/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/sparse_categorical_crossentropy/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/sqrt/: mod.rs
src/tensor/tensor_ops/sum/: cpu_kernel.rs  mod.rs
src/tensor/tensor_ops/utilities/: backward.rs  mod.rs  unsqueeze.rs
(+22 files in other folders)
