[package]
name = "rust_grad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
metal = "0.27.0"
num-traits = "0.2.17"
rand = "0.8.5"

[dev-dependencies]
sentencepiece = "0.11.2"
sentencepiece-sys="0.11.2"